examples/valid/14_existential_enums.lane
module Examples.Valid14

pub enum Packed {
  hide[T](T)
}

pub fn repack(p : Packed) -> Packed {
  match p {
    Packed::hide[T](value) => Packed::hide[T](value)
  }
}

pub let packed_int : Packed = Packed::hide[Int](builtin("%answer"))

pub let repacked_int : Packed = repack(packed_int)
