examples/invalid/18_existential_hidden_type_escape.lane
module Examples.Invalid18
// invalid: values whose type contains an opened hidden type cannot escape
pub enum Packed {
  hide[T](T)
}

pub fn bad(p : Packed) -> Int {
  match p {
    Packed::hide[T](value) => value
  }
}
